src/objects/Framework__System_Log__c.object
<CustomObject>
    <description>Fonteva System Logs captures diagnostic and debugging data for all exceptions handled by Registered Apps using the Fonteva Framework.</description>
    <fields>
        <fullName>Framework__Data__c</fullName>
        <description>Data contains the current log at the time the System Log was generated either by an exception, Registered App event, Fonteva Framework event, or user triggered event.</description>
        <inlineHelpText>Data contains the current log at the time the System Log was generated either by an exception, Registered App event, Fonteva Framework event, or user triggered event.</inlineHelpText>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Framework__Exception_Data__c</fullName>
        <description>Exception data contains information specifically related to exceptions handled by the Fonteva Platform including code line number, exception message, exception type, as well as blamed Registered App and/or Registered Object when applicable.</description>
        <inlineHelpText>Exception data contains information specifically related to exceptions handled by the Fonteva Platform including code line number, exception message, exception type, as well as blamed Registered App and/or Registered Object when applicable.</inlineHelpText>
        <label>Exception Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Framework__Is_Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the log has shipped to our remote logging server.</description>
        <inlineHelpText>Whether or not the log has shipped to our remote logging server.</inlineHelpText>
        <label>Is Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Framework__Path__c</fullName>
        <description>The path of the requested URL from the user who created the System Log.</description>
        <inlineHelpText>The path of the requested URL from the user who created the System Log.</inlineHelpText>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__Registered_App__c</fullName>
        <description>The display name of the Registered App that generated the log.</description>
        <inlineHelpText>The display name of the Registered App that generated the log.</inlineHelpText>
        <label>Registered App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__Registered_Object__c</fullName>
        <description>The full api name of the Registered Object that generated the System Log.</description>
        <inlineHelpText>The full api name of the Registered Object that generated the System Log.</inlineHelpText>
        <label>Registered Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__Type__c</fullName>
        <description>**System Calculated** Populates with a general description of the event that triggered the System Log.</description>
        <inlineHelpText>**System Calculated** Populates with a general description of the event that triggered the System Log.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__User_Profile__c</fullName>
        <description>The user profile.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; CreatedBy.ProfileId, CreatedBy.Profile.Name , &quot;_blank&quot;)</formula>
        <inlineHelpText>The user profile.</inlineHelpText>
        <label>User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__User_Type__c</fullName>
        <description>The user type.</description>
        <formula>TEXT(CreatedBy.UserType)</formula>
        <inlineHelpText>The user type.</inlineHelpText>
        <label>User Type</label>
        <type>Text</type>
    </fields>
    <label>System Log</label>
    <listViews>
        <fullName>Framework__All</fullName>
        <columns>NAME</columns>
        <columns>Framework__Registered_App__c</columns>
        <columns>Framework__Registered_Object__c</columns>
        <columns>Framework__Type__c</columns>
        <columns>Framework__Path__c</columns>
        <columns>Framework__User_Type__c</columns>
        <columns>Framework__User_Profile__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>today</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Framework__Exception_Data__c</columns>
        <columns>Framework__Registered_App__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>today</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>System Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>